✨ Added React Icons, Toastify notifications, and animated anime background

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
